fixed narrative overflow issue

--- a/public/sass/dashboard.sass
+++ b/public/sass/dashboard.sass
@@ -138,8 +138,10 @@ body
 
   #narrative
     margin: 0px
-    padding: 3px $leftpad
+    padding: 3px 0px 3px $leftpad
     width: 90%
+    max-height: 220px
+    overflow-y: scroll
     font-family: 'Lato', sans-serif
     font-size: .8em
 
